--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <![endif]-->
 </head>
 <body>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -161,10 +159,12 @@
             </div>
             <div class="col-md-3">
                 <div class="well">
-                    sidebar
+                    <h4><b>Словарь</b></h4>
                 </div>
             </div>
         </div>
     </div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
