First version of dictionary (without tags)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <a href="a/">
                     <div class="btn btn-primary btn-lg results-btn">
                         <h4><b>Общая таблица результатов</b></h4>
@@ -157,18 +157,17 @@
                 </div>
                 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="well">
                     <div class="sis-dictionary">
     <h4><b>Словарь</b></h4>
     <input type="text" class="search-field" value="" placeholder="введите подстроку">
     <div class="search-controls"></div>
-    <!--<div class="search-results well" style="background: white">-->
-    <table class="search-results table" style="background: white">
-        <tr><td class="word">word</td><td class="translation">слово</td></tr>
-        <tr><td class="word">noun</td><td class="translation">существительное</td></tr>
-
-        <!--<div class="translation pull-right">перевод</div><div class="word">Word</div>-->
+    <table class="search-results-table table">
+        <tbody class="search-results">
+            <tr><td class="word">word</td><td class="translation">слово</td></tr>
+            <tr><td class="word">noun</td><td class="translation">существительное</td></tr>
+        </tbody>
     </table>
     <!--</div>-->
 </div>
@@ -178,5 +177,6 @@
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/dictionary.js"></script>
 </body>
 </html>
