--- a/index.html
+++ b/index.html
@@ -155,12 +155,14 @@
     <h4><b>Словарь</b></h4>
     <input type="text" class="search-field" value="" placeholder="введите подстроку">
     <div class="search-controls"></div>
-    <table class="search-results-table table">
-        <tbody class="search-results">
-            <tr><td class="word">word</td><td class="translation">слово</td></tr>
-            <tr><td class="word">noun</td><td class="translation">существительное</td></tr>
-        </tbody>
-    </table>
+    <div class="search-results-container">
+        <table class="table">
+            <tbody class="search-results">
+                <tr><td class="word">word</td><td class="translation">слово</td></tr>
+                <tr><td class="word">noun</td><td class="translation">существительное</td></tr>
+            </tbody>
+        </table>
+    </div>
     <!--</div>-->
 </div>
                 </div>
