Dictionary: merge duplicates, show only specified tags

--- a/index.html
+++ b/index.html
@@ -158,12 +158,9 @@
     <div class="search-results-container">
         <table class="table">
             <tbody class="search-results">
-                <tr><td class="word">word</td><td class="translation">слово</td></tr>
-                <tr><td class="word">noun</td><td class="translation">существительное</td></tr>
             </tbody>
         </table>
     </div>
-    <!--</div>-->
 </div>
                 </div>
             </div>
@@ -172,5 +169,8 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/dictionary.js"></script>
+    <script type="text/javascript">
+        dictionary.load(['день 1', 'день 2', 'день 3', 'день 4']);
+    </script>
 </body>
 </html>
